--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/style.css
@@ -62,19 +62,19 @@ p {
     opacity: 1;
     transform: translateX(0);
 }
-/* 
-.mousemove {
+
+/* .mousemove {
     height: 50px;
     width: 50px;
     border: 2px solid rgb(170, 124, 132);
     position: absolute;
     transform: translate(-50%,-50%);
     transition: .7s ease;;
-    /* left: 50%;
+    left: 50%;
     top: 50%; 
     border-radius: 50px;    
 }
- */
+  */
 
 nav {
     background-color: rgb(72, 11, 184);
@@ -82,8 +82,26 @@ nav {
     width: 100%;
     height: -50px;
     top: -50px;
-    /* z-index: -100; */
+    /* z-index: 100; */
     transition: .4s;
+}
+
+nav::after {
+    content: '';
+    height: 150px;
+    width: 150px;
+    background: radial-gradient(circle closest-side,rgb(255, 255, 255, 0.75), transparent);
+    position: absolute;
+    transform: translate(-50%,-50%);
+    transition: 0.25s;
+    z-index: 20;
+    opacity: 0;
+    left: var(--x);
+    top: var(--y);
+}
+
+nav:hover::after {
+    opacity: 1;
 }
 
 ul {
