--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
@@ -23,3 +23,17 @@ p {
     width: 240px;
     margin: 10px auto 0;
 }
+
+.question-clicked {
+    background: rgb(47, 47, 47);
+    border: 6px dashed pink;
+    
+}
+
+.wrong {
+    text-decoration-line: line-through;
+    color: red;
+    border: 4px solid red;
+    margin: 0;
+    
+}
