--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
@@ -26,7 +26,7 @@ p {
 
 .question-clicked {
     background: rgb(47, 47, 47);
-    border: 6px dashed rgb(15, 163, 15);
+    border: 6px solid green;
     
 }
 
