--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
@@ -22,6 +22,9 @@ p {
     visibility: hidden;
     width: 240px;
     margin: 10px auto 0;
+    opacity: 0;
+    transition: .6s;
+    transform: translateX(-200px);
 }
 
 .question-clicked {
@@ -42,4 +45,18 @@ p {
     border: 4px solid red;
     margin: 0;
     
+}
+
+.show-response {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.mousemove {
+    height: 50px;
+    width: 50px;
+    border: 2px solid pink;
+    position: absolute;
+    border-radius: 50px;
 }
