--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
@@ -66,3 +66,20 @@ p {
     transition: .4s ease;
     z-index: -1;
 }
+
+nav {
+    background: blue;
+    position: fixed;
+    width: 100%;
+    height: 50px;
+    top: -50px;
+    transition: .1s ease-in;     
+}
+
+
+ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    padding: 0;
+}
