--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/code/style.css
@@ -76,6 +76,23 @@ nav {
     transition: .1s ease-in;     
 }
 
+nav::after {
+    content: '';
+    height: 150px;
+    width: 150px;
+    background: radial-gradient(circle closest-side, rgba(255, 255, 255, 0.70), transparent);
+    position: absolute;
+    transform: translate(-50%, -50%);
+    transition: .25s;
+    z-index: 20;
+    opacity: 0;
+    left: var(--x);
+    top: var(--y);
+}
+
+nav:hover::after{
+    opacity: 1;
+}
 
 ul {
     display: flex;
