--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/style.css
@@ -25,9 +25,64 @@ p {
     margin: 10px auto 0;
 }
 
+.question-clicked {
+    background-color: ;
+    border-radius: 30px;
+    border: 6px dashed #3e5ab6;
+    margin: 0 50px;
+    transition: ease .75s;
+    /* animation-duration:25s;
+    animation-name: question-clicked; */
+    /* animation:question-clicked 5s;
+    animation-delay: 250ms; */
+    animation: linear infinite 25s question-clicked;
+}
 
+@keyframes question-clicked {
+    0 {
+      margin:0;
+    }
+    25% {
+        margin-top: 25px;
+    }
+    50% {
+      margin-top:50px;
+    } 
+    75% {
+        margin-top:75px;
+    }
+    100% {
+      margin-top:100px;
+    }
+    75% {
+        margin-bottom: 75px;
+      } 
+    50% {
+        margin-bottom: 50px;
+      }
+    25% {
+        margin-bottom: 25px;
+    }
 
+    0 {
+        margin: 0;
+    }
 
+    /* 0 {
+        margin-top: 0;
+      }
+    
+      100% {
+        margin-top: 150px;
+      }
+    50%{
+        margin-bottom: 75px;
+      }
+      0 {
+
+      } */
+      
+  }
 
 
 
