--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/style.css
@@ -10,6 +10,7 @@ body {
     margin: 0;
     color: #fff;
     min-height: 200vh;
+    background: rgb(0, 0, 0);
 }
 
 .box {
@@ -24,7 +25,8 @@ p {
     width: 240px;
     margin: 10px auto 0;
     opacity: 0;
-    transition: .6s
+    transition: .6s;
+    transform: translateX(-200px)
 }
 
 .question-clicked {      /* Class ajouté en JS */
@@ -65,15 +67,19 @@ p {
 .responsewrong {
   background: red;
   text-decoration: line-through;
+ 
 }
 
 .show-response {
   visibility: visible;
   opacity: 1;
   background: green;
+  transform: translateX(0);
 }
 
-
+.tenter {
+ 
+}
 
 
 
