--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/style.css
@@ -81,25 +81,28 @@ p {
 
 
 
-.erreur {
+/* .erreur {
+  /* position: absolute;
+  top: 100px; */
+  /* justify-content: center; */
   
+  /*
   color: #fff;
   z-index: 10;
   visibility: visible;
-  /* position: absolute;
-  top: 100px; */
+  
   display: initial;
   text-align: center;
-  /* justify-content: center; */
+  
   align-items: center;
   opacity: 0;
-}
+} */
 
-.erreur:hover{
+/* .erreur:hover{
   transform: translateX(-200px);
   opacity: 1;
   color: #fff;
-}
+} */
 
 
 
