--- a/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/style.css
+++ b/DOM/1/Apprendre Javascript de A à Z – Le DOM/2/2/TP/Cours/TP/1/CODE/CODE/style.css
@@ -41,7 +41,7 @@ p {
     /* animation:question-clicked 5s;
     animation-delay: 250ms; */
     animation: linear infinite 5s question-clicked;
-    border: 6px dashed green; 
+    /* border: 6px dashed green !important;  */
 }
 
 @keyframes question-clicked {
@@ -66,20 +66,24 @@ p {
       
   }
 
-.responsewrong {
-  background: red;
-  text-decoration: line-through;
-  color: #fff;
-}
-
 .show-response {
   visibility: visible;
   opacity: 1;
   background: green;
   transform: translateX(0);
+  
 }
 
+.responsewrong {
+  background: red;
+  /* text-decoration: line-through; */
+  color: #fff;
+}
 
+.responsewronggg {
+  border: 6px dashed red; 
+  color: #ffffff;
+}
 
 /* .erreur {
   /* position: absolute;
