--- a/Backgroung facebook/style.css
+++ b/Backgroung facebook/style.css
@@ -1,17 +1,15 @@
-.ph {
-   
-}
 
-.prvi {
-    background: url('./aa.jpg') center ;
+
+
+/* .prvi {
     width: 100%;
-    height: 700px;
-    
+    height: 550px;
 }
 
 .drugi {
-   
+    position: absolute;
+    right: 0;
     
-}
+} */
 
-milos1234, Milosnikola123.
+/* milos1234, Milosnikola123. */
