--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
@@ -1,4 +1,64 @@
-body {
-    background: url(./bg.jpg) center/cover no-repeat;
-    height: 100vh;
+:root {
+    --color1: #eb9de7be;
+    --color2: #1a722d;
+    --color3: rgb(61, 201, 91);
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background: url(./bg.jpg) center/cover fixed no-repeat;
+    /* filter: brightness(250%); */
+    height: 100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 900;
+    display: flex;
+    align-items: flex-start;
+    justify-content:center
+    
+}
+
+
+h1 {
+    color: var(--color3);
+    margin-bottom: 20px;
+}
+p {
+    color: var(--color1);
+}
+
+.card {
+    margin: 2rem;
+    background-color: #00000075;
+    border: 2px solid #000;
+    border-radius: 20px;
+    padding: 0 1rem;
+    width: calc(100% - 100px);
+    padding: 20px 20px 6px;
+    text-align: justify;
+    box-shadow: 5px -1px 20px 20px #000000bd;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
