--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
@@ -1,7 +1,8 @@
 :root {
-    --color1: #eb9de7be;
-    --color2: #1a722d;
-    --color3: rgb(61, 201, 91);
+    --color1: #ad77ab;
+    --color2: #6228af;
+    --color3: #3dc95b;
+    --color4: #141212;
 }
 
 * {
@@ -24,7 +25,7 @@ body {
 
 
 h1 {
-    color: var(--color3);
+    color: white;
     margin-bottom: 20px;
 }
 p {
@@ -37,25 +38,63 @@ p {
     border: 2px solid #000;
     border-radius: 20px;
     padding: 0 1rem;
-    width: calc(100% - 100px);
+    width: calc(100% - 100px);  
     padding: 20px 20px 6px;
     text-align: justify;
     box-shadow: 5px -1px 20px 20px #000000bd;
+    backdrop-filter: blur(5px);
 }
 
+.card::before{
+    content: "\2730";
+    position: absolute;
+    top: 14px;
+    right: 20px;
+    font-size: 2.4rem;
+    color: #fff;
+}
 
+.grid-container {
+    display: grid;
+    grid-template-columns:20% 80%;
+}
 
+.polygon-container {
+   filter: drop-shadow(-1px 10px 5px var(--color1));
+   /* Mettre parent en Grid */
+   place-self: centrer left;
+}
 
+.polygon {
+    clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+    background: linear-gradient(135deg, var(--color2) 0%, red 100%);
+    height: 100px;
+    width: 100px;
+    
+}
 
+.polygon::after {
+    content: "Un texte";
+    position: absolute;
+    color: var(--color4);
+    background: var(--color3);
+    top: 33%;
+    left: 40%;
+    transform: translate(-50%, -50%) rotate(344deg);
+    width: 70px;
+    font-size: 15px;
+    text-align: center;
+    padding: 4px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    
+}
 
-
-
-
-
-
-
-
-
+p {
+    line-height: 20px;
+    margin: 20px 0;
+    color: var(--color4);
+    display: -moz-box;
+}
 
 
 
