--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
@@ -122,6 +122,7 @@ input[type="checkbox"]{
 input[type="checkbox"]:checked + label {
     background: red;
     transform: scale(1.2);
+    /* filter: brightness(50%); */
 }
 
 label {
@@ -130,6 +131,7 @@ label {
     padding: 10px;
     background: var(--color2);
     transition: 0.2s;
+    user-select: none;
 }
 
 label:hover{
@@ -137,21 +139,50 @@ label:hover{
     transition:.2s ease-out;
     border-radius: 15%;
     font-size: 16px;
+    color: #ffffff;
 }
 
+.e-mail {
+    text-align: center;
+    margin-bottom: 20px;
+}
 
+.e-mail input {
+    padding: 10px;
+    background-repeat: 5px;
+    outline: none;
+    border: 3px solid transparent;
+    transition: .3s;
+    text-align: center;
+    font-size: 1.1rem;
+    min-width: 150px;
+    width: 35%;
+    max-width: 300px;
+}
 
+input[type="text"]:focus {
+    background: transparent;
+    color: white;
+    border: 3px solid var(--color1);
+    border-radius:  150px;
+    transition: .7s;
+}
 
+input[type="text"]::placeholder {
+    color: var(--color3);
+    font-family: Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
 
+/********************** button  ******************************/
 
-
-
-
-
-
-
-
-
+button {
+    cursor: pointer;
+    background: var(--color1);
+    border: none;
+    color: chartreuse;
+    font-size: 1.3rem;
+    padding: 10px;
+}
 
 
 
