--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
@@ -19,8 +19,7 @@ body {
     font-weight: 900;
     display: flex;
     align-items: flex-start;
-    justify-content:center
-    
+    justify-content: center
 }
 
 
@@ -28,6 +27,7 @@ h1 {
     color: white;
     margin-bottom: 20px;
 }
+
 p {
     color: var(--color1);
 }
@@ -38,14 +38,14 @@ p {
     border: 2px solid #000;
     border-radius: 20px;
     padding: 0 1rem;
-    width: calc(100% - 100px);  
+    width: calc(100% - 100px);
     padding: 20px 20px 6px;
     text-align: justify;
     box-shadow: 5px -1px 20px 20px #000000bd;
     backdrop-filter: blur(5px);
 }
 
-.card::before{
+.card::before {
     content: "\2730";
     position: absolute;
     top: 14px;
@@ -56,13 +56,13 @@ p {
 
 .grid-container {
     display: grid;
-    grid-template-columns:20% 80%;
+    grid-template-columns: 20% 80%;
 }
 
 .polygon-container {
-   filter: drop-shadow(-1px 10px 5px var(--color1));
-   /* Mettre parent en Grid */
-   place-self: centrer left;
+    filter: drop-shadow(-1px 10px 5px var(--color1));
+    /* Mettre parent en Grid */
+    place-self: centrer left;
 }
 
 .polygon {
@@ -70,7 +70,7 @@ p {
     background: linear-gradient(135deg, var(--color2) 0%, red 100%);
     height: 100px;
     width: 100px;
-    
+
 }
 
 .polygon::after {
@@ -86,7 +86,7 @@ p {
     text-align: center;
     padding: 4px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
+
 }
 
 p {
@@ -94,14 +94,14 @@ p {
     margin: 20px 0;
     color: var(--color4);
     display: -webkit-box;
-    -webkit-box-orient:vertical;
+    -webkit-box-orient: vertical;
     -webkit-line-clamp: 4;
     overflow-x: hidden;
     overflow-y: scroll;
 
 }
 
-p::selection{
+p::selection {
     background: var(--color1);
     color: #fff;
 }
@@ -115,11 +115,11 @@ p::selection{
     margin: 0 20px 30px;
 }
 
-input[type="checkbox"]{
+input[type="checkbox"] {
     display: none;
 }
 
-input[type="checkbox"]:checked + label {
+input[type="checkbox"]:checked+label {
     background: red;
     transform: scale(1.2);
     /* filter: brightness(50%); */
@@ -134,9 +134,9 @@ label {
     user-select: none;
 }
 
-label:hover{
+label:hover {
     background: #9561d8;
-    transition:.2s ease-out;
+    transition: .2s ease-out;
     border-radius: 15%;
     font-size: 16px;
     color: #ffffff;
@@ -164,7 +164,7 @@ input[type="text"]:focus {
     background: transparent;
     color: white;
     border: 3px solid var(--color1);
-    border-radius:  150px;
+    border-radius: 150px;
     transition: .7s;
 }
 
@@ -179,28 +179,51 @@ button {
     cursor: pointer;
     background: var(--color1);
     border: none;
+    border-radius: 10%;
     color: chartreuse;
     font-size: 1.3rem;
     padding: 10px;
+    margin: 0 auto;
+    display: block;
+    transition: .4s;
+}
+
+button:hover {
+    letter-spacing: 3px;
+    border-radius: 25px;
+}
+
+button:active {
+    transform: scale(1.2);
+}
+
+button:hover+a,
+a:hover {
+    opacity: 1;
+    transform: translateY(0);
+    transition: .4s;
+    visibility: visible;
+    transform: scale(1.2);
+}
+
+a {
+    margin-top: 10px;
+    color: rgb(255, 255, 255);
+    /* text-decoration: none; */
+    text-align: center;
+    display: block;
+    opacity: .4;
+    transform: translateY(50px);
+    visibility: hidden;
+    transform: 1.7s;
+
+}
+
+a:visited {
+    color: var(--color4);
 }
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+1h28 min
