--- a/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
+++ b/1 From Scratch TP EX/EX/3 FromScratch Cours/1. HTML/1. HTML/1. HTML/Cours CSS 2-2/style.css
@@ -277,7 +277,12 @@ label:nth-child(4):hover {
     }
 }
 
-
+img {
+    height: 40px;
+    position: absolute;
+    filter: drop-shadow(0px 6px 3px #9ffa0d93);
+    z-index: ;
+}
 
 
 
