--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/style.css
@@ -139,6 +139,10 @@ footer {
     
 }
 
+/* ul.li {
+    display: flex;
+    
+} */
 
 /******* 3 li ****/
 
@@ -146,12 +150,12 @@ footer {
 
 .ull {
     
-   
-    list-style-type: none;
-    
-    width: 15rem;
-    border-radius: 5px solid #000000a6;
     margin:0;
+    padding-left: 1rem;
+    list-style-type: none;
+    width: 13rem;
+    border-radius: 5px solid #000000a6;
+    
 }
 
 li {
@@ -167,7 +171,7 @@ li {
 	align-content: center;
     justify-content: center;
     background: #410eb8;
-    border: 3px solid #000;
+    border: 5px solid #000000a6;;
     border-radius: 50px;
     text-transform: capitalize;
 }
