--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/style.css
@@ -119,10 +119,10 @@ p {
 
 
 footer {
-    margin: 0 1rem 3rem 1rem;
+    margin: 0 1rem 0rem 1rem;
     background:  #000000a6;
     /* width: 100%; */
-    height: auto;
+    height:210px;
     border-radius: 25px;
 }
 
@@ -134,7 +134,7 @@ footer {
 	justify-content: space-between;
 	font-size: 1.5rem;
     width: 50%;
-    padding: 1rem 1rem 0 1rem;
+    padding: 1rem .5rem 0rem 0rem;
     text-transform: capitalize;
     
 }
@@ -163,7 +163,7 @@ li {
 }
 
 .lii {
-    padding: 15px 0;
+    padding-top: 15px;
     color: #fff;
     display: flex;
     flex-direction: row;
@@ -177,6 +177,28 @@ li {
 }
 
  
+
+
+/***  **  IMG   **   */ 
+
+.drugi {
+    width: 100%;
+    display: flex;
+    margin-left: 50rem;
+    
+}
+
+.drugi li {
+    position: relative;
+    bottom: 6rem;
+    padding:0 5rem;
+}
+
+
+
+
+
+
 
 
 
