--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/3. [TP1 présentation] Intégration Helium (Flexbox)/style.css
@@ -1,14 +1,13 @@
 * {
-    margin-left: .5rem;
-    box-sizing: border-box;
+  margin-left: 0.5rem;
+  box-sizing: border-box;
 }
- 
 
- body {
-    background: rgb(29,29,29);
- }
+body {
+  background: rgb(29, 29, 29);
+}
 
- /* header h1 {
+/* header h1 {
     color:#fff;
     display: flex;
     width: 30%;
@@ -31,112 +30,111 @@ ul {
 
 /****************** header + nav  **********************************/
 
- header {
-    display: flex;
-    align-items: center; /* Aligne verticalement les éléments */
-    justify-content: space-between; /* Espace entre h1 et le nav */
-    color:#fff;
+header {
+  display: flex;
+  align-items: center;
+  /* Aligne verticalement les éléments */
+  justify-content: space-between;
+  /* Espace entre h1 et le nav */
+  color: #fff;
 }
 
 header h1 {
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    text-transform: capitalize;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  text-transform: capitalize;
 }
 
 /* Appliquer un flexbox à l'ul pour aligner les li horizontalement */
 .ul {
-    display: flex;
-    list-style: none; /* Enlève les puces des éléments de la liste */
-    margin: 0; /* Enlève la marge par défaut */
-    padding: 0; /* Enlève le padding par défaut */
+  display: flex;
+  list-style: none;
+  /* Enlève les puces des éléments de la liste */
+  margin: 0;
+  /* Enlève la marge par défaut */
+  padding: 0;
+  /* Enlève le padding par défaut */
 }
 
 .ul li {
-    margin: 0 4rem 0 20rem; /* Espace entre chaque li */
-    text-transform: capitalize;
-    font-size: 20px;
+  margin: 0 4rem 0 20rem;
+  /* Espace entre chaque li */
+  text-transform: capitalize;
+  font-size: 20px;
 }
-
-
 
 /*************************  article   **************************************/
 
-
 h2 {
-    color: #fff;
-    font-size: 100px;
-    text-transform: capitalize;
-    width: 50rem;
-    margin-bottom: 0;
-    margin-top: 15rem;
+  color: #fff;
+  font-size: 100px;
+  text-transform: capitalize;
+  width: 50rem;
+  margin-bottom: 0;
+  margin-top: 15rem;
 }
 
-h3 + p{
-    width: 50rem;
+h3 + p {
+  width: 50rem;
 }
 
 h3 {
-   color: blue;
-   font-size: 2rem;
-   text-transform: capitalize;
-   margin-top: 1.5rem;
-   width: 50rem;
-   margin-top: 0;
-   margin-bottom: 0;
+  color: blue;
+  font-size: 2rem;
+  text-transform: capitalize;
+  margin-top: 1.5rem;
+  width: 50rem;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 p {
-    width: 50rem !important;
-    color: #fff;
+  width: 50rem !important;
+  color: #fff;
 }
 
 .img {
-    margin-bottom: 30rem;
+  margin-bottom: 30rem;
 }
 
 .img img {
-    
-    width: 55rem;
-    height: 55rem;
-    float: right;
-    margin-right: 2rem;
-    margin-top: 10rem;
-	/* flex-direction: row;
+  width: 55rem;
+  height: 55rem;
+  float: right;
+  margin-right: 2rem;
+  margin-top: 10rem;
+  /* flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: space-between;
 	align-items:flex-start;
 	align-content:flex-start */
-    position: absolute;
-    right: .5rem;
-    top: 1rem;
+  position: absolute;
+  right: 0.5rem;
+  top: 1rem;
 }
-
 
 /**********************   Footer   **********************/
 
-
 footer {
-    margin: 0 1rem 0rem 1rem;
-    background:  #000000a6;
-    /* width: 100%; */
-    height:210px;
-    border-radius: 25px;
+  margin: 0 1rem 0rem 1rem;
+  background: #000000a6;
+  /* width: 100%; */
+  height: 210px;
+  border-radius: 25px;
 }
 
 .aside .li {
-    color: #fff;
-    list-style: none;
-    display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	font-size: 1.5rem;
-    width: 50%;
-    padding: 1rem .5rem 0rem 0rem;
-    text-transform: capitalize;
-    
+  color: #fff;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  width: 50%;
+  padding: 1rem 0.5rem 0rem 0rem;
+  text-transform: capitalize;
 }
 
 /* ul.li {
@@ -146,62 +144,43 @@ footer {
 
 /******* 3 li ****/
 
-
-
 .ull {
-    
-    margin:0;
-    padding-left: 1rem;
-    list-style-type: none;
-    width: 13rem;
-    border-radius: 5px solid #000000a6;
-    
+  margin: 0;
+  padding-left: 1rem;
+  list-style-type: none;
+  width: 13rem;
+  border-radius: 5px solid #000000a6;
 }
 
 li {
-    text-align: center;
+  text-align: center;
 }
 
 .lii {
-    padding-top: 15px;
-    color: #fff;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-	align-content: center;
-    justify-content: center;
-    background: #410eb8;
-    border: 5px solid #000000a6;;
-    border-radius: 50px;
-    text-transform: capitalize;
+  padding-top: 15px;
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  background: #410eb8;
+  border: 5px solid #000000a6;
+  border-radius: 50px;
+  text-transform: capitalize;
 }
 
- 
-
-
-/***  **  IMG   **   */ 
+/***  **  IMG   **   */
 
 .drugi {
-    width: 100%;
-    display: flex;
-    margin-left: 50rem;
-    
+  width: 100%;
+  display: flex;
+  margin-left: 50rem;
 }
 
 .drugi li {
-    position: relative;
-    bottom: 6rem;
-    padding:0 5rem;
+  position: relative;
+  bottom: 6rem;
+  padding: 0 5rem;
 }
-
-
-
-
-
-
-
-
-
-
-
 
