--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/6. [TP3 présentation] Être responsive +  explication + corrigé/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/6. [TP3 présentation] Être responsive +  explication + corrigé/style.css
@@ -203,25 +203,16 @@ button {
 }
 
 @media screen and (max-width: 644px) {
-  /* .infos h3 ,.infos-rigth h3{
-   
-  } */
-  .infos-rigth{
-    display: flex;
-    flex-wrap: wrap;
-     
-   }
-  
-   .infos-left {
-    width: 10rem !important;
-    
-    display: flex;
-   }
+ 
 
 }
 
 @media screen and (max-width: 630px) {
   
+  .infos-rigth h3{
+    width: 1rem;
+  }
+
  /* .btn-container {
   display: flex;
   flex-direction: column;
