--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/7. [TP4 présentation] Grid Complexe/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/7. [TP4 présentation] Grid Complexe/style.css
@@ -1,13 +1,21 @@
 body {
     min-height: 100vh;
-    background: #000000;
-  }
-  
-  div:nth-child(1) {
-    background: yellow;
+    display: grid;
+    gap: 1rem;
+    
+    grid-template-columns: repeat(3, 300px);
+    grid-template-rows: 1fr 1fr 1fr;
+}
+
+div:nth-child(1) {
+    background: yellow; 
+    /* grid-column: 1 / 3; */
+    grid-column: 1 / span 2;
   }
   div:nth-child(2) {
     background: purple;
+    grid-column: 3/3;
+    grid-row: 1 /3;
   }
   div:nth-child(3) {
     background: green;
@@ -18,10 +26,4 @@ body {
   div:nth-child(5) {
     background: orchid;
   }
-  
 
-  div {
-    display: grid;
-    gap: 1rem 1rem;
-    grid-auto-columns: 1fr;
-  }
