--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
@@ -46,7 +46,13 @@ ul li:nth-child(1) {
 }
 
 ul .li span {
-    height: 20px;
-    border-top-style: solid;
+   position: relative;
+   top: 2px;
+   right: 2px;
+   background-color: chartreuse;
+    /* height: 100px; */
+    /* border-top-style: solid; */
     border-bottom: blue;
+    /* border-top-color:blue; */
 }
+
