--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+    
+}
+
 body {
     margin: 0;  
     padding: 0;
@@ -6,7 +11,8 @@ body {
 nav {
     display: flex;
     /* margin: 0 5rem; */
-    padding:5px 50px;
+    padding:0px 50px;
+    margin-bottom: -17px;
 }
 
 ul {
@@ -38,21 +44,44 @@ ul li {
     justify-content: flex-start;
     transform: translateY(-25%);
 }
-
+ul {
+    margin-top: 2px 0;
+}
 ul li:nth-child(1) {
     color: blue;
-    border: blue 3px;
-    
+    position: relative;
+    top: -17px;
+    border-top: 1px solid;
+    padding-top: 11px;
+    border-top-width: .4rem;
 }
 
-ul .li span {
-   position: relative;
-   top: 2px;
-   right: 2px;
-   background-color: chartreuse;
-    /* height: 100px; */
-    /* border-top-style: solid; */
-    border-bottom: blue;
-    /* border-top-color:blue; */
+ul li {
+    display: flex;
+}
+
+.main-header {
+display: grid;
+justify-items: center;
+
+}
+
+.logo {
+  
+  width: 100%;
+  height: 100%;
+}
+
+img {
+background: url(./maquette\ desktop.png) no-repeat cover;
+z-index: -5;
+}
+
+h1 {
+
+}
+
+button {
+
 }
 
