--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
@@ -63,25 +63,37 @@ ul li {
 .main-header {
 display: grid;
 justify-items: center;
-
+/* position: relative; */
+position: relative;
+z-index: 10;
 }
 
-.logo {
-  
-  width: 100%;
-  height: 100%;
+
+.main-header #logo {
+   
+  position: absolute;
+  z-index: 5;
 }
 
-img {
-background: url(./maquette\ desktop.png) no-repeat cover;
-z-index: -5;
+#logo img {
+    
+    
 }
 
-h1 {
 
-}
 
-button {
 
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
