--- a/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
+++ b/1 From Scratch TP EX/EX/2. CSS/1. Cours CSS/9. [Projet 1 présentation] Intégration Gaming Campus/assets/img/style.css
@@ -39,10 +39,7 @@ ul li {
     background: #b4a8a8;
     border-radius:45%;
     border: 12px solid  #b4a8a8;
-    /* padding:0 5px; */
     color: #000000;
-    /* line-height:10px; */
-    /* margin-bottom: -50px; */
     justify-content: flex-start;
     transform: translateY(-25%);
 }
@@ -142,23 +139,112 @@ p {
 /***************** icon-part *****************/
 
 
-section {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
 .icon-part {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    background-color: #000000;
     
     width: 100%;
+}
+
+.icon-part-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%;
+    
     margin-top: 50px;
     margin-bottom: 50px;
+    margin-right: 0;
+    margin-left: 0;
+    padding: 0;
 }
+
+.icon-part-container .list-icon-part {
+   
+    margin-left: auto;
+    margin-right: auto;
+    padding: 5rem 0;
+}
+
+.lip-logo {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    padding: 0;
+    
+}
+
+.list-icon-part .lip-logo img {
+    
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+}
+
+.list-icon-part h3 {
+    font-size: 20px;
+    font-family: "Montserrat", serif;
+    font-weight: 500;
+    margin-top: 20px;
+    width: 100%;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 600;
+    color: #fff;
+}
+
+.icon-part-container .list-icon-part p {
+    display: block;
+    font-size: 13px;
+    font-family: "Montserrat", serif;
+    font-weight: 500;
+    text-align:center justify;
+    color: #fff;
+    width: 60%;
+    align-self: center;
+
+}
+
+.list-icon-part button {
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+    background-color:transparent;
+    width: 30%;
+    text-align: center;
+    color: #fff;
+    padding: 5px;
+    border-top-style:2px #000;
+    border-bottom-color:#fff;
+    border-right-style:2px solid;
+    border-right-color: #fff;
+}
+
+/***************** news-part *****************/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
